<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:text="VIACEP"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_textcep"
        app:layout_constraintTop_toBottomOf="@id/textview"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:hint="@string/digite_o_cep"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textBairro"
        android:hint="@string/bairro"
        app:layout_constraintTop_toBottomOf="@id/edit_textcep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textComplemento"
        android:hint="@string/complemento"
        app:layout_constraintTop_toBottomOf="@id/textBairro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textddd"
        android:hint="@string/ddd"
        app:layout_constraintTop_toBottomOf="@id/textComplemento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textgia"
        android:hint="@string/gia"
        app:layout_constraintTop_toBottomOf="@id/textddd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textIBGE"
        android:hint="@string/ibge"
        app:layout_constraintTop_toBottomOf="@id/textgia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textLocalidade"
        android:hint="@string/localidade"
        app:layout_constraintTop_toBottomOf="@id/textIBGE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textLogradouro"
        android:hint="@string/logradouro"
        app:layout_constraintTop_toBottomOf="@id/textLocalidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textSiafi"
        android:hint="@string/Siafi"
        app:layout_constraintTop_toBottomOf="@id/textLogradouro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textUF"
        android:hint="@string/UF"
        app:layout_constraintTop_toBottomOf="@id/textSiafi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textUnidade"
        android:hint="@string/Unidade"
        app:layout_constraintTop_toBottomOf="@id/textUF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        android:text="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/pbCEP"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUnidade"
        />
</androidx.constraintlayout.widget.ConstraintLayout>